Update the calendar with dives
Update the calendar with dives

--- a/style.css
+++ b/style.css
@@ -44,9 +44,7 @@ header .right{
 .view{
     display: flex;
 }
-#calendar-table,
-#guests-table th,
-#guests-table td {
+.time > div {
     border: 1px solid #ccc;
     border-collapse: collapse;
     padding: 8px;
