--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 button{
     cursor: pointer;
@@ -80,16 +80,21 @@ header .right{
 .main .fifth_section{
     height: 40px;
     align-items: center;
+    padding: 0 10px;
 }
 .filter_left {
     font-weight: bold;
 }
-#staffButton::after{
-    content: "\f043";
-    vertical-align: middle;
-    font-family: "Font Awesome 6 Free";
-    color: black;
-    font-weight: 900;
+.first_section_right{
+    margin-left: auto;
+}
+.left_part .button_inside{
+    border-radius: 20px;
+    border: 2px solid rgb(164, 164, 250);
+    padding: 4px 9px;
+}
+svg{
+    color:  rgb(164, 164, 250);
 }
 .middle_part{
     display: flex;
@@ -130,6 +135,7 @@ header .right{
     border-radius: 20px;
     border: 2px solid grey;
     padding: 3px 15px;
+    font-weight: bold;
 }
 .header_of_table .right .icon::before{
     content: "\f0ac";
@@ -147,6 +153,7 @@ header .right{
 .first_row {
     font-size: small;
     display: flex;
+    font-weight: bold;
 }
 
 .first_row .first_dio {
