Uploaded button Language (html+js+css)
Uploaded button Language (html+js+css):
*extending the button functionality as like as language preferences.
*creating a dictionary for the project, using English and Croatian languages.
*used dictionary only for text objects (not for dates).
*connecting the dictionary.

--- a/style.css
+++ b/style.css
@@ -131,13 +131,7 @@ svg{
     align-items: center;
     margin-left: auto;
 }
-.middle_part .count{
-    border-radius: 20px;
-    border: 2px solid grey;
-    padding: 3px 15px;
-    font-weight: bold;
-}
-.header_of_table .right .icon::before{
+.header_of_table .right .language::before{
     content: "\f0ac";
     vertical-align: middle;
     font-family: "Font Awesome 6 Free";
