--- a/style.css
+++ b/style.css
@@ -3,24 +3,30 @@ html, body {
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 button{
     cursor: pointer;
     padding: 0px 8px;
 }
+
 header{
     padding: 10px 10px;
     height: 50px;
     display: flex;
     text-align: center;
-}   
+}  
+
 header .left button{
     color: grey;
+    border: none;
 }
+
 header .right button{
     border-radius: 20px;
-    border: 2px solid rgb(164, 164, 250);
+    border: 1px solid rgba(35, 166, 248, 1);
     padding: 5px 17px;
 }
+
 .list li{
     display: inline-block;
     margin: 0;
@@ -30,26 +36,31 @@ header .right button{
 header .list {
     height: 50px;
 }
+
 .list .update,
 .list .dots{
     padding: 3px 8px;
 }
+
 .list .update::before{
     content: "\f021";
     vertical-align: middle;
     font-family: "Font Awesome 6 Free";
-    color: rgb(164, 164, 250);
+    color: rgba(35, 166, 248, 1);
     font-weight: 900;
 }
+
 .list .dots::before{
     content: "\f141";
     vertical-align: middle;
     font-family: "Font Awesome 6 Free";
-    color: rgb(164, 164, 250);
+    color: rgba(35, 166, 248, 1);
     font-weight: 900;
 }
+
 header .right{
    margin-left: auto;
+   padding-right: 15px;
 }
 
 #addButton {
@@ -89,10 +100,10 @@ header .right{
   z-index: 100;
 }
 
-
 .main{
     display: flex;
 }
+
 .left_part{
     width: 320px;
     display: flex;
@@ -100,9 +111,15 @@ header .right{
     gap: 20px;
     height: 100%;
 }
+
 #calendar-container {
     width: 320px;
 }
+
+.flatpickr-calendar {
+  box-shadow: none !important;
+}
+
 .filter{
     display: flex;
     height: 50px;
@@ -130,11 +147,11 @@ header .right{
 
 .left_part .button_inside{
     border-radius: 20px;
-    border: 2px solid rgb(164, 164, 250);
+    border: 1px solid rgba(35, 166, 248, 1);
     padding: 4px 9px;
 }
 svg{
-    color:  rgb(164, 164, 250);
+    color:  rgba(35, 166, 248, 1);
 }
 .middle_part{
     display: flex;
@@ -152,19 +169,11 @@ svg{
     align-items: center;
     gap: 10px;
 }
-
-.middle_part .header_of_table .left  .count{
+.middle_part .header_of_table .left .count{
     padding: 0px 17px;
     border: 1px solid gray;
     border-radius: 20px;
 }
-
-
-
-
-
-
-
 
 .header_of_table .button_right::before{
     content: "\f061";
@@ -192,6 +201,22 @@ svg{
     color: black;
     font-weight: 900;
 }
+
+.weeklyButton{
+    display: flex;
+}
+
+.weeklyButton button{
+    gap: 50px;
+}
+
+#weeklyViewButton{
+    cursor: pointer;
+    border: 1px solid rgba(35, 166, 248, 1);
+    border-radius: 5px;
+    padding: 5px 20px;
+}
+
 .calendar_table {
     display: flex;
     flex-direction: column;
@@ -290,7 +315,8 @@ svg{
     margin-left: auto;
     flex-direction: column;
     gap: 20px;
-    padding: 20px 10px;
+    padding: 20px 5px;
+    padding-right: 20px;
     height: 100%;
 }
 .main .right_part button{
