--- a/style.css
+++ b/style.css
@@ -3,30 +3,24 @@ html, body {
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
 button{
     cursor: pointer;
     padding: 0px 8px;
 }
-
 header{
     padding: 10px 10px;
     height: 50px;
     display: flex;
     text-align: center;
-}  
-
+}   
 header .left button{
     color: grey;
-    border: none;
 }
-
 header .right button{
     border-radius: 20px;
     border: 1px solid rgba(35, 166, 248, 1);
     padding: 5px 17px;
 }
-
 .list li{
     display: inline-block;
     margin: 0;
@@ -36,12 +30,10 @@ header .right button{
 header .list {
     height: 50px;
 }
-
 .list .update,
 .list .dots{
     padding: 3px 8px;
 }
-
 .list .update::before{
     content: "\f021";
     vertical-align: middle;
@@ -56,8 +48,8 @@ header .list {
     font-family: "Font Awesome 6 Free";
     color: rgba(35, 166, 248, 1);
     font-weight: 900;
-}
 
+}
 header .right{
    margin-left: auto;
    padding-right: 15px;
@@ -103,6 +95,7 @@ header .right{
 .modal .modal-content input{
   margin-top: 5%;
 }
+
 .description, .details{
   margin-top: 10%;
   width: 100%;
@@ -114,18 +107,29 @@ header .right{
 
 .main{
     display: flex;
+    gap: 5px;
 }
-
 .left_part{
-    width: 320px;
+    width: 200px; min-width: 200px;
     display: flex;
     flex-direction: column;
     gap: 20px;
     height: 100%;
 }
 
+#calendar-container .dp-year {
+    width: 55px;
+}
+#calendar-container .dp-month{
+    width: 73px;
+}
+
 #calendar-container {
-    width: 320px;
+    width: 100%;
+    font-size: 12px;
+}
+#calendar-container select{
+    padding: 0 24px 0 3px;
 }
 
 .flatpickr-calendar {
@@ -138,11 +142,9 @@ header .right{
     align-items: center;
     padding-left: 10px;
 }
-
 .filter_right{
     margin-left: auto;
 }
-
 .main .first_section,
 .main .second_section,
 .main .third_section,
@@ -152,11 +154,9 @@ header .right{
     align-items: center;
     padding: 0 10px;
 }
-
 .filter_left {
     font-weight: bold;
 }
-
 .first_section_right{
     margin-left: auto;
 }
@@ -166,18 +166,16 @@ header .right{
     border: 1px solid rgba(35, 166, 248, 1);
     padding: 4px 9px;
 }
-
 svg{
     color:  rgba(35, 166, 248, 1);
 }
-
 .middle_part{
     display: flex;
     flex-direction: column; 
     height: 100%;
     gap: 20px;
+    min-width: 0;
 }
-
 .header_of_table {
     display: flex;
     align-items: center;
@@ -190,7 +188,7 @@ svg{
     gap: 10px;
 }
 
-.middle_part .header_of_table .left .count{
+.middle_part .header_of_table .left  .count{
     padding: 0px 17px;
     border: 1px solid gray;
     border-radius: 20px;
@@ -245,6 +243,10 @@ svg{
     display: flex;
     flex-direction: column;
     font-size: x-small;
+    width: fit-content;
+}
+.calendar_table_wrap {
+    overflow-x: auto;
 }
 
 .first_row {
@@ -267,6 +269,8 @@ svg{
 .first_row .second_dio {
     display: flex;
     width: 1085px;
+    /*! avoid px for containers width, if using fixed width, then you must handle overflow */
+    /* flex-grow: 1; */
 }
 
 .first_row .second_dio > div {
@@ -317,13 +321,17 @@ svg{
 }
 
 .split-cell {
-  height: 46px;
+  min-height: 46px;
   width: 155px;
   border: 1px solid #ccc;
   box-sizing: border-box;
   position: relative;
 }
-
+.selected-day {
+    background-color: #3b82f6;
+    color: white;
+    border-radius: 4px;
+}
 .split-cell::before {
   content: "";
   position: absolute;
@@ -339,17 +347,14 @@ svg{
     margin-left: auto;
     flex-direction: column;
     gap: 20px;
-    padding: 20px 5px;
-    padding-right: 20px;
+    padding: 20px 10px;
     height: 100%;
 }
-
 .main .right_part button{
     border-radius: 20px;
     border: 1px solid #ccc;
     padding: 3px 8px;
 }
-
 .right_part .list::before{
     content: "\f0ae";
     vertical-align: middle;
@@ -357,7 +362,6 @@ svg{
     color: grey;
     font-weight: 900;
 }
-
 .right_part .diagramm::before{
     content: "\f201";
     vertical-align: middle;
