--- a/style.css
+++ b/style.css
@@ -77,20 +77,28 @@ header .right{
 
 .modal.hidden {
   display: none;
-  
 }
 
 .modal-content {
   background: white;
   padding: 20px;
   border-radius: 8px;
-  width: 320px;
+  width: 420px;
 }
 
+.modalHeader{
+    text-align: center;
+}
 .modalButton{
     margin-top: 5%;
     display: flex;
     justify-content: space-evenly
+}
+
+.modalButton button{
+    border-radius: 20px;
+    border: 1px solid rgba(35, 166, 248, 1);
+    padding: 5px 17px;
 }
 
 .modal .modal-content input{
@@ -100,6 +108,30 @@ header .right{
 .description, .details{
   margin-top: 10%;
   width: 100%;
+}
+
+.tags-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  margin-bottom: 5px;
+}
+
+.tag {
+  background-color: #007bff;
+  color: white;
+  padding: 3px 8px;
+  border-radius: 12px;
+  font-size: 0.85rem;
+  user-select: none;
+  display: flex;
+  align-items: center;
+}
+
+.tag .remove-tag {
+  margin-left: 5px;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 .main{
