Updated modal forms (html+js+css)
Updated the Event and Few Events modal forms (html+js+css):
*validation adjustment for required fields in the Event and Few Events modal forms.
*fix for proper rendering of newly added events in the correct calendar cells.

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ header .right{
   background: white;
   padding: 20px;
   border-radius: 8px;
-  width: 420px;
+  width: 320px;
 }
 
 .modalHeader{
@@ -105,9 +105,16 @@ header .right{
   margin-top: 5%;
 }
 
-.description, .details{
+.title, .description, .details{
   margin-top: 10%;
   width: 100%;
+}
+
+.title:hover, 
+.description:hover, 
+.details:hover,
+#tagsInput:hover {
+  background-color: rgb(201, 230, 248);
 }
 
 .tags-container {
