--- a/style.css
+++ b/style.css
@@ -131,21 +131,21 @@ header .right{
   flex-wrap: wrap;
   gap: 5px;
   margin-bottom: 5px;
-  border: 1px solid purple; 
-  min-height: 30px; /* 👈 добавь */
+  border: 1px solid rgba(35, 166, 248, 1); 
+  min-height: 25px; /* 👈 добавь */
 
 }
 
 .tag {
-  background-color: #007bff;
+  background-color:rgba(35, 166, 248, 1);
   color: white;
-  padding: 3px 8px;
-  border-radius: 12px;
-  font-size: 0.85rem;
+  padding: 0px 8px;
+  border-radius: 8px;
+  font-size: 0.65rem;
   user-select: none;
   display: flex;
   align-items: center;
-  border: 1px solid violet; 
+  border: 1px solid rgba(30, 64, 175, 1); 
 }
 
 .tag .remove-tag {
