--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ header .right{
   gap: 5px;
   margin-bottom: 5px;
   border: 1px solid rgba(35, 166, 248, 1); 
-  min-height: 25px; /* 👈 добавь */
+  min-height: 25px;
 
 }
 
