--- a/style.css
+++ b/style.css
@@ -131,7 +131,6 @@ header .right{
   flex-wrap: wrap;
   gap: 5px;
   margin-bottom: 5px;
-  border: 1px solid rgba(35, 166, 248, 1); 
   min-height: 25px;
 
 }
@@ -296,6 +295,10 @@ svg{
     border: 1px solid rgba(35, 166, 248, 1);
     border-radius: 5px;
     padding: 5px 20px;
+}
+
+.weeklyButton button:hover{
+    color: white;
 }
 
 .calendar_table {
