--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@ html, body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+button:not(.first_section_right) {
+    padding: 0px 8px;
+}
+
 button{
     cursor: pointer;
-    padding: 0px 8px;
 }
 
 .event-color-1 { background-color: #4CAF50; }  
